--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./src/server.js",
-    "start": "NODE_ENV=production nodemon ./src/server.js"
+    "start": "NODE_ENV=production nodemon ./src/server.js",
+    "test": "jest",
+    "lint": "eslint . --quiet --fix"
   }
 }
