--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "husky": "^4.2.5",
     "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -32,5 +33,11 @@
     "start": "NODE_ENV=production nodemon ./src/server.js",
     "test": "jest",
     "lint": "eslint . --quiet --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint",
+      "pre-push": "yarn lint"
+    }
   }
 }
