--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weatherApi",
-  "version": "1.0.0",
+  "version": "1.1.7",
   "main": "app.js",
   "repository": "https://github.com/yeukfei02/weatherApi.git",
   "author": "Donald Wu <yeukfei02@gmail.com>",
@@ -17,6 +17,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
+    "git-cz": "^4.7.1",
     "helmet": "^3.21.3",
     "husky": "^4.2.5",
     "jest": "^25.1.0",
@@ -27,13 +28,16 @@
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "standard-version": "^9.0.0"
   },
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./src/app.js",
     "start": "NODE_ENV=production nodemon ./src/app.js",
     "test": "jest",
-    "lint": "eslint . --quiet --fix"
+    "lint": "eslint . --quiet --fix",
+    "commit": "npx git-cz",
+    "release": "standard-version"
   },
   "husky": {
     "hooks": {
